First push, with new PCN screens and index

--- a/app/views/adhoc.html
+++ b/app/views/adhoc.html
@@ -43,10 +43,25 @@
       </h3>
       <p>Don't use any of this prototype code on production services, it doesn't adhere to development standards and is hacked together quickly and roughly.</p>
     </div>
- 
+    <hr>
+    <h2>Key:</h2>
+    <strong class="nhsuk-tag nhsuk-tag--blue">
+      PECS
+    </strong>&nbsp;&nbsp;<strong class="nhsuk-tag nhsuk-tag--green">
+      DECS
+    </strong> &nbsp;&nbsp;<strong class="nhsuk-tag">
+      BOTH
+    </strong>
      <hr>
- 
-     <h3>Kickout pages</h3>
+
+     <details class="nhsuk-details nhsuk-expander">
+      <summary class="nhsuk-details__summary">
+        <span class="nhsuk-details__summary-text">
+          All Journeys
+        </span>
+      </summary>
+      <div class="nhsuk-details__text">
+        <h3>Kickout pages</h3>
 
 
      <table class="nhsuk-table">
@@ -59,16 +74,168 @@
           <th role="columnheader" class="" scope="col">
             URL
           </th>
+          <th role="columnheader" class="" scope="col">
+            PECS/DECS
+          </th>
+        </tr>
+      </thead>
+      <tbody class="nhsuk-table__body">
+        <tr role="row" class="nhsuk-table__row">
+          <td class="nhsuk-table__cell">More information needed</td>
+          <td class="nhsuk-table__cell "><a href="v5-enquiry/adhoc-screens/cannot-confirm-3rd">3rd attempt failed</a></td>
+          <td class="nhsuk-table__cell"><strong class="nhsuk-tag">
+            BOTH
+          </strong></td>
+        </tr>
+        
+      </tbody>
+    </table>
+      </div>
+    </details>
+
+    
+ 
+     
+
+    
+
+     <details class="nhsuk-details nhsuk-expander">
+      <summary class="nhsuk-details__summary">
+        <span class="nhsuk-details__summary-text">
+          Enquiry Letter
+        </span>
+      </summary>
+      <div class="nhsuk-details__text">
+        <h3>Kickout pages</h3>
+
+
+     <table class="nhsuk-table">
+      
+      <thead role="rowgroup" class="nhsuk-table__head">
+        <tr role="row">
+          <th role="columnheader" class="" scope="col">
+            Page title
+          </th>
+          <th role="columnheader" class="" scope="col">
+            URL
+          </th>
+          <th role="columnheader" class="" scope="col">
+            PECS/DECS
+          </th>
         </tr>
       </thead>
       <tbody class="nhsuk-table__body">
         <tr role="row" class="nhsuk-table__row">
           <td class="nhsuk-table__cell">Call us about your enquiry letter</td>
           <td class="nhsuk-table__cell "><a href="v5-enquiry/adhoc-screens/call-us-about-your-enquiry-letter">User enters enquiry reference number before receiving letter</a></td>
+          <td class="nhsuk-table__cell"><strong class="nhsuk-tag">
+            BOTH
+          </strong></td>
+        </tr>
+
+        <tr role="row" class="nhsuk-table__row">
+          <td class="nhsuk-table__cell">We cannot confirm you were entitled</td>
+          <td class="nhsuk-table__cell "><a href="v5-enquiry/adhoc-screens/we-cannot-confirm-entitled-plain">User enters enquiry reference number before receiving letter</a></td>
+          <td class="nhsuk-table__cell"><strong class="nhsuk-tag">
+            BOTH
+          </strong></td>
+        </tr>
+        <tr role="row" class="nhsuk-table__row">
+          <td class="nhsuk-table__cell">We cannot confirm you were entitled - Inset text</td>
+          <td class="nhsuk-table__cell "><a href="v5-enquiry/adhoc-screens/we-cannot-confirm-entitled-inset">User enters enquiry reference number before receiving letter</a></td>
+          <td class="nhsuk-table__cell"><strong class="nhsuk-tag">
+            BOTH
+          </strong></td>
         </tr>
         
       </tbody>
     </table>
+      </div>
+    </details>
+ 
+     
+
+   
+
+    
+    <details class="nhsuk-details nhsuk-expander">
+      <summary class="nhsuk-details__summary">
+        <span class="nhsuk-details__summary-text">
+          Penalty Charge Notice
+        </span>
+      </summary>
+      <div class="nhsuk-details__text">
+        <p>You can see your GP records by:</p>
+        <h3>Kickout pages</h3>
+
+
+     <table class="nhsuk-table">
+      
+      <thead role="rowgroup" class="nhsuk-table__head">
+        <tr role="row">
+          <th role="columnheader" class="" scope="col">
+            Page title
+          </th>
+          <th role="columnheader" class="" scope="col">
+            URL
+          </th>
+          <th role="columnheader" class="" scope="col">
+            PECS/DECS
+          </th>
+        </tr>
+      </thead>
+      <tbody class="nhsuk-table__body">
+        <tr role="row" class="nhsuk-table__row">
+          <td class="nhsuk-table__cell">Call us about your PCN letter</td>
+          <td class="nhsuk-table__cell "><a href="v5-enquiry/adhoc-screens/call-us-about-your-pcn-letter">User enters PCN reference number before receiving letter</a></td>
+          <td class="nhsuk-table__cell"><strong class="nhsuk-tag">
+            BOTH
+          </strong></td>
+        </tr>
+        
+      </tbody>
+    </table>
+      </div>
+    </details>
+ 
+
+
+    <details class="nhsuk-details nhsuk-expander">
+      <summary class="nhsuk-details__summary">
+        <span class="nhsuk-details__summary-text">
+          Error Messages
+        </span>
+      </summary>
+      <div class="nhsuk-details__text">
+        <table class="nhsuk-table">
+      
+          <thead role="rowgroup" class="nhsuk-table__head">
+            <tr role="row">
+              <th role="columnheader" class="" scope="col">
+                Page title
+              </th>
+              <th role="columnheader" class="" scope="col">
+                URL
+              </th>
+              <th role="columnheader" class="" scope="col">
+                PECS/DECS
+              </th>
+            </tr>
+          </thead>
+          <tbody class="nhsuk-table__body">
+            <tr role="row" class="nhsuk-table__row">
+              <td class="nhsuk-table__cell"></td>
+              <td class="nhsuk-table__cell "><a href="v5-enquiry/adhoc-screens/"></a></td>
+              <td class="nhsuk-table__cell"><strong class="nhsuk-tag">
+                BOTH
+              </strong></td>
+            </tr>
+            
+          </tbody>
+        </table>
+      </div>
+    </details>
+     
 
      
  
