--- a/app/views/index.html
+++ b/app/views/index.html
@@ -47,10 +47,10 @@
      <hr>
 
 
-     <div class="nhsuk-grid-row" style="background-color:white; padding: 25px;">
+     <div class="nhsuk-grid-row" style="padding: 25px; width: 800px; margin-left: 70px;">
       <div class="nhsuk-grid-column-one-half">
-         <h3>Postcode Screen Functionality</h3>
-         <dl class="nhsuk-summary-list">
+         <h4>Postcode Screen Functionality</h3>
+         <dl class="nhsuk-summary-list" style="font-size: medium;">
     
           <div class="nhsuk-summary-list__row">
             <dt class="nhsuk-summary-list__key">
@@ -94,8 +94,8 @@
         </dl>
       </div>
       <div class="nhsuk-grid-column-one-half">
-         <h3>Benefit Number Screen Functionality</h3>
-         <dl class="nhsuk-summary-list">
+         <h4>Benefit Number Screen Functionality</h3>
+         <dl class="nhsuk-summary-list" style="font-size: small;">
     
           <div class="nhsuk-summary-list__row">
             <dt class="nhsuk-summary-list__key">
@@ -126,7 +126,7 @@
      
      
 
-    <br>
+    <hr>
  
      <div class="nhsuk-card">
        <div class="nhsuk-card__content">
