--- a/app/views/v5-enquiry/adhoc-screens/cannot-confirm-3rd.html
+++ b/app/views/v5-enquiry/adhoc-screens/cannot-confirm-3rd.html
@@ -5,7 +5,7 @@
 {% block pageTitle %}
 <header class="nhsuk-header nhsuk-header--transactional" role="banner">
   <div class="nhsuk-width-container nhsuk-header__container">
-    <div class="nhsuk-header__logo nhsuk-header__logo--only"><a class="nhsuk-header__link" href="/" aria-label="NHS homepage">
+    <div class="nhsuk-header__logo nhsuk-header__logo--only"><a class="nhsuk-header__link" href="/v4/respond-to-your-letter" aria-label="NHS homepage">
 
         <svg class="nhsuk-logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 16" height="40" width="100">
           <path class="nhsuk-logo__background" fill="#005eb8" d="M0 0h40v16H0z"></path>
@@ -24,30 +24,20 @@
 {% endblock %}
 
 {% block content %}
-
-
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
-      <span class="nhsuk-caption-l">Confirm your entitlement</span>
+      <span class="nhsuk-caption-l">Your details</span>
       <h1>
-        We cannot confirm you were entitled
+       More information needed
       </h1>
     
-      <p>The information you've given us does not prove you were entitled to free NHS prescriptions between 18 November 2019 and 30 November 2019.</p>
-      
-
-      <h2>What to do next</h2>
-      <p>Send us proof to show that you were entitled to free NHS prescriptions or had a valid Prescription Prepayment Certificate between 18 November 2019 and 30 November 2019.</p>
-      <p><a href="/v3/we-need-proof">Find out about what we can accept as proof and where to send it</a>.</p>
-      <p>If you do not send us proof, or we cannot find your exemption, you will be sent a Penalty Charge Notice. This will include information on how and when to pay your penalty charge.</p>
-      <p>If you were not entitled to free NHS prescriptions but have an exceptional reason why you made the claim, you can ask us to review your enquiry letter. <a href="/v3/who-can-ask-for-review">Find out if you can ask for a review</a>.</p>
-      <p><a href="">Print this page</a></p>
+      <p>We have been unable to confirm your identity using the information you've provided.</p>
+      <p><a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs">Contact us if you have received a letter</a>.</p>
       <h3>Feedback</h3>
       <p>Leaving feedback takes 5 minutes. Your comments will help us provide a better service.</p>
       <p><a href="">Leave feedback</a></p>
-            
-          
-  
+
+
       
     </div>
   </div>
