Changed h1 size and begin to add cancel throughout

--- a/app/views/adhoc.html
+++ b/app/views/adhoc.html
@@ -12,7 +12,7 @@
 
 <!-- Set the page title -->
 {% block pageTitle %}
-  NHS.UK prototype kit
+NHS.UK prototype kit
 {% endblock %}
 
 <!-- For adding a breadcrumb -->
@@ -29,19 +29,20 @@
 <!-- Page layout code can be found at https://service-manual.nhs.uk/design-system/styles/layout -->
 {% block content %}
 <div class="nhsuk-grid-row">
-   <div class="nhsuk-grid-column-full">
-     <!-- Change the page title here -->
-     <h1 class="nhsuk-heading-xl">Transforming Exemption Checking Service</h1>
-     <!-- Add your content here -->
-     <!-- Styles and components can be found at https://beta.nhs.uk/service-manual/styles-components-patterns -->
-     <div class="nhsuk-warning-callout">
+  <div class="nhsuk-grid-column-full">
+    <!-- Change the page title here -->
+    <h1 class="nhsuk-heading-xl">Transforming Exemption Checking Service</h1>
+    <!-- Add your content here -->
+    <!-- Styles and components can be found at https://beta.nhs.uk/service-manual/styles-components-patterns -->
+    <div class="nhsuk-warning-callout">
       <h3 class="nhsuk-warning-callout__label">
         <span role="text">
           <span class="nhsuk-u-visually-hidden">Important: </span>
           Important
         </span>
       </h3>
-      <p>Don't use any of this prototype code on production services, it doesn't adhere to development standards and is hacked together quickly and roughly.</p>
+      <p>Don't use any of this prototype code on production services, it doesn't adhere to development standards and is
+        hacked together quickly and roughly.</p>
     </div>
     <hr>
     <h2>Key:</h2>
@@ -52,9 +53,9 @@
     </strong> &nbsp;&nbsp;<strong class="nhsuk-tag">
       BOTH
     </strong>
-     <hr>
+    <hr>
 
-     <details class="nhsuk-details nhsuk-expander">
+    <details class="nhsuk-details nhsuk-expander">
       <summary class="nhsuk-details__summary">
         <span class="nhsuk-details__summary-text">
           All Journeys
@@ -64,42 +65,43 @@
         <h3>Kickout pages</h3>
 
 
-     <table class="nhsuk-table">
-      
-      <thead role="rowgroup" class="nhsuk-table__head">
-        <tr role="row">
-          <th role="columnheader" class="" scope="col">
-            Page title
-          </th>
-          <th role="columnheader" class="" scope="col">
-            URL
-          </th>
-          <th role="columnheader" class="" scope="col">
-            PECS/DECS
-          </th>
-        </tr>
-      </thead>
-      <tbody class="nhsuk-table__body">
-        <tr role="row" class="nhsuk-table__row">
-          <td class="nhsuk-table__cell">More information needed</td>
-          <td class="nhsuk-table__cell "><a href="v5-enquiry/adhoc-screens/cannot-confirm-3rd">3rd attempt failed</a></td>
-          <td class="nhsuk-table__cell"><strong class="nhsuk-tag">
-            BOTH
-          </strong></td>
-        </tr>
-        
-      </tbody>
-    </table>
+        <table class="nhsuk-table">
+
+          <thead role="rowgroup" class="nhsuk-table__head">
+            <tr role="row">
+              <th role="columnheader" class="" scope="col">
+                Page title
+              </th>
+              <th role="columnheader" class="" scope="col">
+                URL
+              </th>
+              <th role="columnheader" class="" scope="col">
+                PECS/DECS
+              </th>
+            </tr>
+          </thead>
+          <tbody class="nhsuk-table__body">
+            <tr role="row" class="nhsuk-table__row">
+              <td class="nhsuk-table__cell">More information needed</td>
+              <td class="nhsuk-table__cell "><a href="v5-enquiry/adhoc-screens/cannot-confirm-3rd">3rd attempt
+                  failed</a></td>
+              <td class="nhsuk-table__cell"><strong class="nhsuk-tag">
+                  BOTH
+                </strong></td>
+            </tr>
+
+          </tbody>
+        </table>
       </div>
     </details>
 
-    
- 
-     
 
-    
 
-     <details class="nhsuk-details nhsuk-expander">
+
+
+
+
+    <details class="nhsuk-details nhsuk-expander">
       <summary class="nhsuk-details__summary">
         <span class="nhsuk-details__summary-text">
           Enquiry Letter
@@ -109,55 +111,58 @@
         <h3>Kickout pages</h3>
 
 
-     <table class="nhsuk-table">
-      
-      <thead role="rowgroup" class="nhsuk-table__head">
-        <tr role="row">
-          <th role="columnheader" class="" scope="col">
-            Page title
-          </th>
-          <th role="columnheader" class="" scope="col">
-            URL
-          </th>
-          <th role="columnheader" class="" scope="col">
-            PECS/DECS
-          </th>
-        </tr>
-      </thead>
-      <tbody class="nhsuk-table__body">
-        <tr role="row" class="nhsuk-table__row">
-          <td class="nhsuk-table__cell">Call us about your enquiry letter</td>
-          <td class="nhsuk-table__cell "><a href="v5-enquiry/adhoc-screens/call-us-about-your-enquiry-letter">User enters enquiry reference number before receiving letter</a></td>
-          <td class="nhsuk-table__cell"><strong class="nhsuk-tag">
-            BOTH
-          </strong></td>
-        </tr>
+        <table class="nhsuk-table">
 
-        <tr role="row" class="nhsuk-table__row">
-          <td class="nhsuk-table__cell">We cannot confirm you were entitled</td>
-          <td class="nhsuk-table__cell "><a href="v5-enquiry/adhoc-screens/we-cannot-confirm-entitled-plain">User enters enquiry reference number before receiving letter</a></td>
-          <td class="nhsuk-table__cell"><strong class="nhsuk-tag">
-            BOTH
-          </strong></td>
-        </tr>
-        <tr role="row" class="nhsuk-table__row">
-          <td class="nhsuk-table__cell">We cannot confirm you were entitled - Inset text</td>
-          <td class="nhsuk-table__cell "><a href="v5-enquiry/adhoc-screens/we-cannot-confirm-entitled-inset">User enters enquiry reference number before receiving letter</a></td>
-          <td class="nhsuk-table__cell"><strong class="nhsuk-tag">
-            BOTH
-          </strong></td>
-        </tr>
-        
-      </tbody>
-    </table>
+          <thead role="rowgroup" class="nhsuk-table__head">
+            <tr role="row">
+              <th role="columnheader" class="" scope="col">
+                Page title
+              </th>
+              <th role="columnheader" class="" scope="col">
+                URL
+              </th>
+              <th role="columnheader" class="" scope="col">
+                PECS/DECS
+              </th>
+            </tr>
+          </thead>
+          <tbody class="nhsuk-table__body">
+            <tr role="row" class="nhsuk-table__row">
+              <td class="nhsuk-table__cell">Call us about your enquiry letter</td>
+              <td class="nhsuk-table__cell "><a href="v5-enquiry/adhoc-screens/call-us-about-your-enquiry-letter">User
+                  enters enquiry reference number before receiving letter</a></td>
+              <td class="nhsuk-table__cell"><strong class="nhsuk-tag">
+                  BOTH
+                </strong></td>
+            </tr>
+
+            <tr role="row" class="nhsuk-table__row">
+              <td class="nhsuk-table__cell">We cannot confirm you were entitled</td>
+              <td class="nhsuk-table__cell "><a href="v5-enquiry/adhoc-screens/we-cannot-confirm-entitled-plain">User
+                  enters enquiry reference number before receiving letter</a></td>
+              <td class="nhsuk-table__cell"><strong class="nhsuk-tag">
+                  BOTH
+                </strong></td>
+            </tr>
+            <tr role="row" class="nhsuk-table__row">
+              <td class="nhsuk-table__cell">We cannot confirm you were entitled - Inset text</td>
+              <td class="nhsuk-table__cell "><a href="v5-enquiry/adhoc-screens/we-cannot-confirm-entitled-inset">User
+                  enters enquiry reference number before receiving letter</a></td>
+              <td class="nhsuk-table__cell"><strong class="nhsuk-tag">
+                  BOTH
+                </strong></td>
+            </tr>
+
+          </tbody>
+        </table>
       </div>
     </details>
- 
-     
 
-   
 
-    
+
+
+
+
     <details class="nhsuk-details nhsuk-expander">
       <summary class="nhsuk-details__summary">
         <span class="nhsuk-details__summary-text">
@@ -169,35 +174,36 @@
         <h3>Kickout pages</h3>
 
 
-     <table class="nhsuk-table">
-      
-      <thead role="rowgroup" class="nhsuk-table__head">
-        <tr role="row">
-          <th role="columnheader" class="" scope="col">
-            Page title
-          </th>
-          <th role="columnheader" class="" scope="col">
-            URL
-          </th>
-          <th role="columnheader" class="" scope="col">
-            PECS/DECS
-          </th>
-        </tr>
-      </thead>
-      <tbody class="nhsuk-table__body">
-        <tr role="row" class="nhsuk-table__row">
-          <td class="nhsuk-table__cell">Call us about your PCN letter</td>
-          <td class="nhsuk-table__cell "><a href="v5-enquiry/adhoc-screens/call-us-about-your-pcn-letter">User enters PCN reference number before receiving letter</a></td>
-          <td class="nhsuk-table__cell"><strong class="nhsuk-tag">
-            BOTH
-          </strong></td>
-        </tr>
-        
-      </tbody>
-    </table>
+        <table class="nhsuk-table">
+
+          <thead role="rowgroup" class="nhsuk-table__head">
+            <tr role="row">
+              <th role="columnheader" class="" scope="col">
+                Page title
+              </th>
+              <th role="columnheader" class="" scope="col">
+                URL
+              </th>
+              <th role="columnheader" class="" scope="col">
+                PECS/DECS
+              </th>
+            </tr>
+          </thead>
+          <tbody class="nhsuk-table__body">
+            <tr role="row" class="nhsuk-table__row">
+              <td class="nhsuk-table__cell">Call us about your PCN letter</td>
+              <td class="nhsuk-table__cell "><a href="v5-enquiry/adhoc-screens/call-us-about-your-pcn-letter">User
+                  enters PCN reference number before receiving letter</a></td>
+              <td class="nhsuk-table__cell"><strong class="nhsuk-tag">
+                  BOTH
+                </strong></td>
+            </tr>
+
+          </tbody>
+        </table>
       </div>
     </details>
- 
+
 
 
     <details class="nhsuk-details nhsuk-expander">
@@ -208,7 +214,7 @@
       </summary>
       <div class="nhsuk-details__text">
         <table class="nhsuk-table">
-      
+
           <thead role="rowgroup" class="nhsuk-table__head">
             <tr role="row">
               <th role="columnheader" class="" scope="col">
@@ -227,18 +233,18 @@
               <td class="nhsuk-table__cell"></td>
               <td class="nhsuk-table__cell "><a href="v5-enquiry/adhoc-screens/"></a></td>
               <td class="nhsuk-table__cell"><strong class="nhsuk-tag">
-                BOTH
-              </strong></td>
+                  BOTH
+                </strong></td>
             </tr>
-            
+
           </tbody>
         </table>
       </div>
     </details>
-     
 
-     
- 
-   </div>
- </div>
+
+
+
+  </div>
+</div>
 {% endblock %}
