--- a/app/views/v5-enquiry/cannot-find-your-details.html
+++ b/app/views/v5-enquiry/cannot-find-your-details.html
@@ -10,7 +10,7 @@ We cannot find your details
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
       <span class="nhsuk-caption-l">Your details</span>
-      <h1>
+      <h1 class="nhsuk-heading-l">
         We cannot find your details
       </h1>
     
