--- a/app/views/v5-enquiry/date-of-birth.html
+++ b/app/views/v5-enquiry/date-of-birth.html
@@ -43,7 +43,7 @@
       <form action="enter-postcode" method="post" class="form">
 
         <span class="nhsuk-caption-l">Your details</span>
-        <h1>What is your date of birth?</h1>
+        <h1 class="nhsuk-heading-l">What is your date of birth?</h1>
         <div class="nhsuk-hint" id="example-hint">
           For example, 31 3 1980
         </div>
@@ -80,7 +80,7 @@
     </button>
     </div>
 
-        
+    <p><a href="respond-to-your-letter">Cancel</a></p>
    
 
     </div>
