--- a/app/views/v5-enquiry/what-you-want-to-do-next-copy.html
+++ b/app/views/v5-enquiry/what-you-want-to-do-next-copy.html
@@ -41,7 +41,7 @@ What do you want to do next?
             <div class="nhsuk-radios__item">
               <input class="nhsuk-radios__input" id="penalty-confirm-pay" name="confirm" type="radio" value="pay">
               <label class="nhsuk-label nhsuk-radios__label" for="pay">
-                I am not entitled to free NHS prescriptions and want to know what happens next
+                I'm not entitled to free NHS prescriptions and want to know what happens next
               </label>
           </div>
           <!-- <div class="nhsuk-hint" id="example-with-hint-text-hint">
@@ -60,20 +60,7 @@ What do you want to do next?
         </div> -->
          
          </div>
-         <details class="nhsuk-details">
-          <summary class="nhsuk-details__summary">
-            <span class="nhsuk-details__summary-text">
-              I was not entitled to free NHS prescriptions but have an exceptional reason why I made the claim
-            </span>
-          </summary>
-          <div class="nhsuk-details__text">
-            <p>If you were not entitled to free NHS prescriptions but have an exceptional reason why you made the claim, you can ask us to review your enquiry letter. Find out if you can ask for a review.
-
-            </p>
-            
-        
-          </div>
-        </details>
+         
             
 
           </fieldset>
@@ -86,7 +73,7 @@ What do you want to do next?
     </div>
 
         
-   
+    <p><a href="respond-to-your-letter">Cancel</a></p>
 
     </div>
   </div>
