--- a/app/views/v5-enquiry/enter-postcode.html
+++ b/app/views/v5-enquiry/enter-postcode.html
@@ -42,7 +42,7 @@
       <form action="v4-postcode-input" method="get" class="form">
 
         <span class="nhsuk-caption-l">Your details</span>
-        <h1>Enter your postcode as shown on your letter</h1>
+        <h1 class="nhsuk-heading-l">Enter your postcode as shown on your letter</h1>
         <div class="nhsuk-form-group">
           <label class="nhsuk-label" for="one-half">
             <div class="nhsuk-hint" id="example-with-hint-text-hint">
@@ -55,7 +55,7 @@
           Continue
         </button>
        </form>
-
+       <p><a href="respond-to-your-letter">Cancel</a></p>
     </div>
   </div>
 
