Changed h1 size and begin to add cancel throughout

--- a/app/views/v5-enquiry/adhoc-screens/call-us-about-your-enquiry-letter.html
+++ b/app/views/v5-enquiry/adhoc-screens/call-us-about-your-enquiry-letter.html
@@ -28,22 +28,16 @@
     <div class="nhsuk-grid-column-two-thirds">
       <span class="nhsuk-caption-l">Your details</span>
       <h1>
-       Call us about your enquiry letter
+       You cannot use this service yet
       </h1>
     
-      <p>As you have not yet received an enquiry letter, you cannot use this online service at the moment.</p>
-      <p>To provide additional information in relation to your enquiry letter you will need to phone or email us.</p>
-      <p>You need to include your reference number. This is in the top left hand corner of your enquiry letter.</p>
+      <p>As you have not received an enquiry letter, you cannot use this service yet.</p>
+     
+      <p>Try again when you receive your enquiry letter.</p>
+      <p><a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs">Contact us if you have any other queries</a>.</p>
       
       
-      <h4>For prescriptions:</h4>
-      <ul>
-        <li>Call us</li>
-      </ul>
-      <h4>For dental treatment:</h4>
-      <ul>
-        <li>Call us</li>
-      </ul>
+  
          
 
 
