Added start and CYA page iterations with refund guidance and content trim

--- a/app/views/adhoc.html
+++ b/app/views/adhoc.html
@@ -192,7 +192,7 @@ NHS.UK prototype kit
           <tbody class="nhsuk-table__body">
             <tr role="row" class="nhsuk-table__row">
               <td class="nhsuk-table__cell">Call us about your PCN letter</td>
-              <td class="nhsuk-table__cell "><a href="v5-enquiry/adhoc-screens/call-us-about-your-pcn-letter">User
+              <td class="nhsuk-table__cell "><a href="v5-enquiry/adhoc-screens/call-us-about-your-pcn">User
                   enters PCN reference number before receiving letter</a></td>
               <td class="nhsuk-table__cell"><strong class="nhsuk-tag">
                   BOTH
@@ -232,6 +232,46 @@ NHS.UK prototype kit
             <tr role="row" class="nhsuk-table__row">
               <td class="nhsuk-table__cell"></td>
               <td class="nhsuk-table__cell "><a href="v5-enquiry/adhoc-screens/"></a></td>
+              <td class="nhsuk-table__cell"><strong class="nhsuk-tag">
+                  BOTH
+                </strong></td>
+            </tr>
+
+          </tbody>
+        </table>
+      </div>
+    </details>
+
+    <details class="nhsuk-details nhsuk-expander">
+      <summary class="nhsuk-details__summary">
+        <span class="nhsuk-details__summary-text">
+         Experimental Designs
+        </span>
+      </summary>
+      <div class="nhsuk-details__text">
+        
+
+
+        <table class="nhsuk-table">
+
+          <thead role="rowgroup" class="nhsuk-table__head">
+            <tr role="row">
+              <th role="columnheader" class="" scope="col">
+                Page title
+              </th>
+              <th role="columnheader" class="" scope="col">
+                URL
+              </th>
+              <th role="columnheader" class="" scope="col">
+                PECS/DECS
+              </th>
+            </tr>
+          </thead>
+          <tbody class="nhsuk-table__body">
+            <tr role="row" class="nhsuk-table__row">
+              <td class="nhsuk-table__cell">Check your personal details</td>
+              <td class="nhsuk-table__cell "><a href="v5-enquiry/check-personal-details-checkbox">Checkbox to confirm they're correct
+                  failed</a></td>
               <td class="nhsuk-table__cell"><strong class="nhsuk-tag">
                   BOTH
                 </strong></td>
