--- a/app/views/v5-enquiry/check-personal-details-checkbox.html
+++ b/app/views/v5-enquiry/check-personal-details-checkbox.html
@@ -40,7 +40,7 @@
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
 
-      <form action="confirmation-page" method="post" class="form">
+      <form action="confirmation-page-dwp" method="post" class="form">
 
         <span class="nhsuk-caption-l">Confirm your entitlement</span>
         <h1 class="nhsuk-heading-xl">Check your personal details are correct</h1>
@@ -124,6 +124,33 @@
           </fieldset>
         
         </div>
+
+
+        <form>
+
+          <div class="nhsuk-form-group">
+        
+            <fieldset class="nhsuk-fieldset" aria-describedby="example-hint">
+              
+        
+             
+              <div class="nhsuk-checkboxes">
+        
+                
+        
+                <div class="nhsuk-checkboxes__item">
+                  <input class="nhsuk-checkboxes__input" id="example-3" name="example" type="checkbox" value="text message" required>
+                  <label class="nhsuk-label nhsuk-checkboxes__label" for="example-3">
+                   <strong> I confirm all my personal details are correct</strong>
+                  </label>
+                </div>
+        
+              </div>
+            </fieldset>
+        
+          </div>
+        
+        </form>
     <div class="nhsuk-form-group">
     <button class="nhsuk-button" type="submit">
      Continue
