--- a/app/views/v5-enquiry/adhoc-screens/call-us-about-your-pcn.html
+++ b/app/views/v5-enquiry/adhoc-screens/call-us-about-your-pcn.html
@@ -5,7 +5,7 @@
 {% block pageTitle %}
 <header class="nhsuk-header nhsuk-header--transactional" role="banner">
   <div class="nhsuk-width-container nhsuk-header__container">
-    <div class="nhsuk-header__logo nhsuk-header__logo--only"><a class="nhsuk-header__link" href="/" aria-label="NHS homepage">
+    <div class="nhsuk-header__logo nhsuk-header__logo--only"><a class="nhsuk-header__link" href="/v4/respond-to-your-letter" aria-label="NHS homepage">
 
         <svg class="nhsuk-logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 16" height="40" width="100">
           <path class="nhsuk-logo__background" fill="#005eb8" d="M0 0h40v16H0z"></path>
@@ -23,38 +23,28 @@
 </header>
 {% endblock %}
 
-{% block outerContent %}
-  
-{% endblock %}
-
 {% block content %}
-
-<div class="nhsuk-back-link">
-  <a class="nhsuk-back-link__link" href="javascript:history.go(-1)">
-    <svg class="nhsuk-icon nhsuk-icon__chevron-left" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" height="24" width="24">
-      <path d="M8.5 12c0-.3.1-.5.3-.7l5-5c.4-.4 1-.4 1.4 0s.4 1 0 1.4L10.9 12l4.3 4.3c.4.4.4 1 0 1.4s-1 .4-1.4 0l-5-5c-.2-.2-.3-.4-.3-.7z"></path>
-    </svg>
-    Go back</a>
-  </div>
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
+      <span class="nhsuk-caption-l">Your details</span>
+      <h1>
+       You cannot use this service yet
+      </h1>
+    
+      <p>As you have not received a Penalty Charge Notice letter, you cannot use this service yet.</p>
+     
+      <p>Try again when you receive your Penalty Charge Notice letter.</p>
+      <p><a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs">Contact us if you have any other queries</a>.</p>
+      
+      
+  
+         
 
-      <form action="enq-benefit-num" method="get" class="form">
 
-        <span class="nhsuk-caption-l">Confirm your entitlement</span>
-        <h1>What is your [Benefit] number?</h1>
-        <div class="nhsuk-form-group">
-          
-          <input class="nhsuk-input nhsuk-u-width-one-half" id="cert-number-input" name="certificatenumber" type="text">
-        </div>
-        <button class="nhsuk-button" data-module="nhsuk-button" type="submit">
-          Continue
-        </button>
-       </form>
-
-       <p><a href="respond-to-your-letter">Cancel</a></p>
-
+      
     </div>
   </div>
-
+  <style>
+  
+  </style>
 {% endblock %}
