Added start and CYA page iterations with refund guidance and content trim

--- a/app/views/v5-enquiry/check-phone-details.html
+++ b/app/views/v5-enquiry/check-phone-details.html
@@ -40,28 +40,49 @@
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
 
-      <form action="confirmation-page-dwp" method="post" class="form">
+      <form action="reviewing-case" method="post" class="form">
 
         <span class="nhsuk-caption-l">Confirm your entitlement</span>
-        <h1 class="nhsuk-heading-l">Check your personal details are correct</h1>
-        <div class="nhsuk-inset-text">
-          <span class="nhsuk-u-visually-hidden">Information: </span>
-          <p>These are the personal details we currently hold for you. </p>
-          <p>If these do not match, we may not be able to find your exemption and you may receive a penalty charge notice.</p>
-        </div>
+        <h1 class="nhsuk-heading-l">Check your contact details are correct</h1>
+        
+        
+        
+        
+        
+        
         <dl class="nhsuk-summary-list">
+
+
 
           <div class="nhsuk-summary-list__row">
             <dt class="nhsuk-summary-list__key">
-              Name
+              How should we contact you
             </dt>
             <dd class="nhsuk-summary-list__value">
-              Michelle Doe
+              Telephone
             </dd>
         
             <dd class="nhsuk-summary-list__actions">
         
-              <a href="update-name-dwp">
+              <a href="best-way-to-contact">
+                Change<span class="nhsuk-u-visually-hidden"> name</span>
+              </a>
+        
+            </dd>
+        
+          </div>
+
+          <div class="nhsuk-summary-list__row">
+            <dt class="nhsuk-summary-list__key">
+             Telephone number
+            </dt>
+            <dd class="nhsuk-summary-list__value">
+             01234 567890
+            </dd>
+        
+            <dd class="nhsuk-summary-list__actions">
+        
+              <a href="what-is-your-phone">
                 Change<span class="nhsuk-u-visually-hidden"> name</span>
               </a>
         
@@ -69,41 +90,8 @@
         
           </div>
         
-          <div class="nhsuk-summary-list__row">
-            <dt class="nhsuk-summary-list__key">
-              Date of birth
-            </dt>
-            <dd class="nhsuk-summary-list__value">
-              21 December 1985
-            </dd>
-        
-            <dd class="nhsuk-summary-list__actions">
-        
-              <a href="update-dob-dwp">
-                Change<span class="nhsuk-u-visually-hidden"> date of birth</span>
-              </a>
-        
-            </dd>
-        
-          </div>
-        
-          <div class="nhsuk-summary-list__row">
-            <dt class="nhsuk-summary-list__key">
-              Address
-            </dt>
-            <dd class="nhsuk-summary-list__value">
-              12 Old Oak Road<br>Throckley<br> NE67 9AD
-            </dd>
-        
-            <dd class="nhsuk-summary-list__actions">
-        
-              <a href="update-address-dwp">
-                Change<span class="nhsuk-u-visually-hidden"> address</span>
-              </a>
-        
-            </dd>
-        
-          </div>
+          
+         
         
           
         
@@ -123,6 +111,8 @@
     <button class="nhsuk-button" type="submit">
      Continue
     </button>
+
+    <p class="navigation"><a class="cancel" href="start">Cancel</a></p>
     </div>
 
         
