--- a/app/views/v5-enquiry/best-way-to-contact.html
+++ b/app/views/v5-enquiry/best-way-to-contact.html
@@ -41,38 +41,43 @@
       <span class="nhsuk-caption-l">Confirm your entitlement</span>
         <h1 class="nhsuk-heading-l">We will now review your case and get back to you. What is the best way for us to contact you?</h1>
 
-      <form action="contact-method" method="get" class="form">
+      <form action="contact-method" method="post" class="form">
 
         <div class="nhsuk-form-group">
 
           <fieldset class="nhsuk-fieldset">
-           
-        
-            <div class="nhsuk-radios">
-        
-              <div class="nhsuk-radios__item">
-                <input class="nhsuk-radios__input" id="example-divider-1" name="contact" type="radio" value="email">
-                <label class="nhsuk-label nhsuk-radios__label" for="example-divider-1">
+          
+            <div class="nhsuk-hint" id="symptoms-hint">
+              Select all options that are relevant to you
+            </div>
+      
+            <div class="nhsuk-checkboxes">
+      
+              <div class="nhsuk-checkboxes__item">
+                <input class="nhsuk-checkboxes__input" id="symptoms-1" name="contact" type="checkbox" value="email" data-checkbox-exclusive-group="symptoms-list">
+                <label class="nhsuk-label nhsuk-checkboxes__label" for="symptoms-1">
                   Email
                 </label>
               </div>
-        
-              <div class="nhsuk-radios__item">
-                <input class="nhsuk-radios__input" id="example-divider-2" name="contact" type="radio" value="phone">
-                <label class="nhsuk-label nhsuk-radios__label" for="example-divider-2">
+      
+              <div class="nhsuk-checkboxes__item">
+                <input class="nhsuk-checkboxes__input" id="symptoms-2" name="contact" type="checkbox" value="phone" data-checkbox-exclusive-group="symptoms-list">
+                <label class="nhsuk-label nhsuk-checkboxes__label" for="symptoms-2">
                   Telephone
                 </label>
               </div>
-        
-              <div class="nhsuk-radios__divider">or</div>
-        
-              <div class="nhsuk-radios__item">
-                <input class="nhsuk-radios__input" id="example-divider-4" name="contact" type="radio" value="post">
-                <label class="nhsuk-label nhsuk-radios__label" for="example-divider-4">
-                 I don't have access to email or a telephone
+      
+            
+      
+              <div class="nhsuk-checkboxes__divider">or</div>
+      
+              <div class="nhsuk-checkboxes__item">
+                <input class="nhsuk-checkboxes__input" id="symptoms-5" name="contact" type="checkbox" value="post" data-checkbox-exclusive data-checkbox-exclusive-group="symptoms-list">
+                <label class="nhsuk-label nhsuk-checkboxes__label" for="symptoms-5">
+                  I don't have access to email or a telephone
                 </label>
               </div>
-        
+      
             </div>
           </fieldset>
           
