--- a/app/views/v5-enquiry/check-personal-details-checkbox.html
+++ b/app/views/v5-enquiry/check-personal-details-checkbox.html
@@ -43,7 +43,7 @@
       <form action="confirmation-page-dwp" method="post" class="form">
 
         <span class="nhsuk-caption-l">Confirm your entitlement</span>
-        <h1 class="nhsuk-heading-xl">Check your personal details are correct</h1>
+        <h1 class="nhsuk-heading-l">Check your personal details are correct</h1>
         
         
         
