--- a/app/views/v5-enquiry/confirm-address.html
+++ b/app/views/v5-enquiry/confirm-address.html
@@ -23,14 +23,14 @@ Check your address is correct
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
 
-      <form action="address-dd" method="post" class="form">
+      <form action="address-contact" method="get" class="form">
 
-        <span class="nhsuk-caption-l">Pay a Penalty Charge Notice</span>
-        <h1 class="nhsuk-heading-xl">Is your address correct?</h1>
+        <span class="nhsuk-caption-l">Confirm your entitlement</span>
+        <h1 class="nhsuk-heading-l">Is your address correct?</h1>
         
-    <div class="nhsuk-hint" id="contact-hint">
-      We'll send confirmation of your Direct Debit to the address you provide.
-    </div>
+    <p>
+      We'll send you a letter ............
+    </p>
         <dl class="nhsuk-summary-list">
 
         
@@ -58,14 +58,14 @@ Check your address is correct
           <div class="nhsuk-radios nhsuk-radios--inline">
 
             <div class="nhsuk-radios__item">
-              <input class="nhsuk-radios__input" id="example-inline-1" name="example-inline" type="radio" value="yes">
+              <input class="nhsuk-radios__input" id="example-inline-1" name="contact" type="radio" value="yes">
               <label class="nhsuk-label nhsuk-radios__label" for="example-inline-1">
                 Yes
               </label>
             </div>
       
             <div class="nhsuk-radios__item">
-              <input class="nhsuk-radios__input" id="example-inline-2" name="example-inline" type="radio" value="no">
+              <input class="nhsuk-radios__input" id="example-inline-2" name="contact" type="radio" value="no">
               <label class="nhsuk-label nhsuk-radios__label" for="example-inline-2">
                 No
               </label>
@@ -84,7 +84,7 @@ Check your address is correct
     <button class="nhsuk-button" type="submit">
      Continue
     </button>
-    </div>
+    </div></form>
 
         
    
